# block-distractions

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  block  config.secrets.example.yaml  config.yaml  dns-blocker.mobileconfig  dns-blocker.mobileconfig.example  pyproject.toml  setup.sh  test_blocking.sh
docs/: EXPERIMENT_PROTOCOL.md
lib/: __init__.py  config.py  daemon.py  experiment.py  hosts.py  obsidian.py  poll.py  state.py  unlock.py  wordcount.py
lib/conditions/: __init__.py  base.py  context.py  obsidian.py  registry.py
remote_api/: deploy.sh  server.py  setup_vm.sh
services/: block-daemon.service  com.block.daemon.plist
tests/: conftest.py  test_conditions.py  test_daemon.py  test_integration.py  test_state.py  test_unlock.py
tools/: analyze_experiment.py
