[project]
name = "block-distractions"
version = "0.1.0"
description = "Website blocking with proof-of-work and emergency unlocks"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-mock>=3.10",
    "freezegun>=1.2",
]

[project.scripts]
block = "block:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
